deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: deploy01
  name: deploy01
spec:
  replicas: 3
  selector:
    matchLabels:
      run: deploy01
  template:
    metadata:
      labels:
        run: deploy01
    spec:
      containers:
      - image: hemasivakishore/jinja2u:16.04
        name: deploy01
