deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: deploy01
  labels:
    app.kubernetes.io/instance: rollingupdate
    run: deploy01
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 80
  selector:
    run: deploy01
  type: NodePort
